fixed z-index

--- a/style.css
+++ b/style.css
@@ -586,7 +586,7 @@ header {
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
   opacity: 0;
   transition: all 0.3s ease;
-  z-index: 0;
+  z-index: -1;
 }
 
 /* Services Section */
